# Full-Stack-Installment-Web-App

./: README.md
backend api/: db.sqlite3  hello.py  pyproject.toml
backend api/account/: views.py
backend api/installment/: settings.py
backend api/product/: serializers.py  views.py
backend api/product/migrations/: 0002_alter_category_photo_alter_product_photo.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: AppHeader.vue  ProductListing.vue  UserLogin.vue
frontend/src/router/: index.js
